@@ -1,3 +1,10 @@
+2003-03-24  Al Riddoch  <alriddoch@zepler.org>
+
+	* src/Objects/gen_cc.py, src/Objects/Entity/Account.h,
+	  src/Objects/Entity/Player.h, src/Objects/Entity/RootEntity.h,
+	  src/Objects/Operation/RootOperation.h: Don't send attributes
+	  when they contain no meanigfull data.
+
 2003-01-30  Al Riddoch  <alriddoch@zepler.org>
 
 	* Added pkgconfig macro, and put installed headers into a subdir.
